userAPI structure provided & ProfileUpdate and GetAllUser moved on this structure !
