# docs/swagger.json
@@ -1,17 +1,13 @@
 {
     "swagger": "2.0",
     "info": {
-        "description": "This is a sample server celler server.",
+        "description": "This is a Gin chat documentation",
         "title": "Swagger Example API",
-        "termsOfService": "http://swagger.io/terms/",
         "contact": {
-            "name": "API Support",
-            "url": "http://www.swagger.io/support",
-            "email": "support@swagger.io"
+            "name": "API Support"
         },
         "license": {
-            "name": "Apache 2.0",
-            "url": "http://www.apache.org/licenses/LICENSE-2.0.html"
+            "name": "Apache 2.0"
         },
         "version": "1.0"
     },
@@ -19,6 +15,50 @@
     "basePath": "/api/v1",
     "paths": {
         "/auth/": {
+            "post": {
+                "description": "1 min for every request, not authenticated, and returns a JWT token",
+                "consumes": [
+                    "application/json"
+                ],
+                "produces": [
+                    "application/json"
+                ],
+                "tags": [
+                    "Authentication"
+                ],
+                "summary": "send token",
+                "parameters": [
+                    {
+                        "description": "Register details",
+                        "name": "Register",
+                        "in": "body",
+                        "required": true,
+                        "schema": {
+                            "$ref": "#/definitions/serializer.RegisterRequest"
+                        }
+                    }
+                ],
+                "responses": {
+                    "200": {
+                        "description": "OK",
+                        "schema": {
+                            "$ref": "#/definitions/utils.RegisterResponse"
+                        }
+                    },
+                    "201": {
+                        "description": "Created",
+                        "schema": {
+                            "$ref": "#/definitions/utils.RegisterResponse"
+                        }
+                    },
+                    "400": {
+                        "description": "Too_Many_Token_Request(7) | Token_Expired_Or_Invalid(2) | We_Don't_Know_What_Happened(8) | MUST_NOT_AUTHENTICATED(1)",
+                        "schema": {
+                            "$ref": "#/definitions/utils.ErrorResponse"
+                        }
+                    }
+                }
+            },
             "put": {
                 "description": "Authenticates a user and returns a JWT token",
                 "consumes": [
@@ -28,9 +68,9 @@
                     "application/json"
                 ],
                 "tags": [
-                    "auth"
+                    "Authentication"
                 ],
-                "summary": "Login User",
+                "summary": "check token",
                 "parameters": [
                     {
                         "description": "Login details",
@@ -57,6 +97,7 @@
                     }
                 }
             }
+
         },
         "/chat/send": {
             "post": {
@@ -94,6 +135,19 @@
                 }
             }
         },
+        "serializer.RegisterRequest": {
+            "type": "object",
+            "required": [
+                "phone_no"
+            ],
+            "properties": {
+                "phone_no": {
+                    "type": "string",
+                    "maxLength": 11,
+                    "minLength": 11
+                }
+            }
+        },
         "serializer.Token": {
             "type": "object",
             "properties": {
@@ -118,15 +172,25 @@
                     "type": "boolean"
                 }
             }
+        },
+        "utils.RegisterResponse": {
+            "type": "object",
+            "properties": {
+                "detail": {
+                    "type": "string"
+                },
+                "isSignup": {
+                    "type": "boolean"
+                }
+            }
         }
     },
     "securityDefinitions": {
-        "BasicAuth": {
+        "Json Web Token (jwt)": {
             "type": "basic"
         }
     },
     "externalDocs": {
-        "description": "OpenAPI",
-        "url": "https://swagger.io/resources/open-api/"
+        "description": "OpenAPI"
     }
 }
